kubernetes/techmart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techmart-api
  namespace: techmart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techmart-api
  template:
    metadata:
      labels:
        app: techmart-api
    spec:
      containers:
        - name: api
          image: techmart-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: techmart-service
  namespace: techmart
spec:
  selector:
    app: techmart-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
