kubernetes/techmart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techmart-ingress
  namespace: techmart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: techmart.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: techmart-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: techmart-frontend-service
                port:
                  number: 80
